--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
        "'c:\\\\Users\\\\huzai\\\\Desktop\\\\End-to-End-ML-Project-MLFlow\\\\research'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
        "'c:\\\\Users\\\\huzai\\\\Desktop\\\\End-to-End-ML-Project-MLFlow'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,22 +88,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'CONFIG_FILE_PATH' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\huzai\\Desktop\\End-to-End-ML-Project-MLFlow\\research\\01_data_ingestion.ipynb Cell 7\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/huzai/Desktop/End-to-End-ML-Project-MLFlow/research/01_data_ingestion.ipynb#W6sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mclass\u001b[39;49;00m \u001b[39mConfigurationManager\u001b[39;49;00m:\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/huzai/Desktop/End-to-End-ML-Project-MLFlow/research/01_data_ingestion.ipynb#W6sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     \u001b[39mdef\u001b[39;49;00m \u001b[39m__init__\u001b[39;49m(\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/huzai/Desktop/End-to-End-ML-Project-MLFlow/research/01_data_ingestion.ipynb#W6sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m         \u001b[39mself\u001b[39;49m,\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/huzai/Desktop/End-to-End-ML-Project-MLFlow/research/01_data_ingestion.ipynb#W6sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m         config_filepath \u001b[39m=\u001b[39;49m CONFIG_FILE_PATH,\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/huzai/Desktop/End-to-End-ML-Project-MLFlow/research/01_data_ingestion.ipynb#W6sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m         params_filepath \u001b[39m=\u001b[39;49m PARAMS_FILE_PATH,\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/huzai/Desktop/End-to-End-ML-Project-MLFlow/research/01_data_ingestion.ipynb#W6sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m         schema_filepath \u001b[39m=\u001b[39;49m SCHEMA_FILE_PATH):\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/huzai/Desktop/End-to-End-ML-Project-MLFlow/research/01_data_ingestion.ipynb#W6sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m         \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mconfig \u001b[39m=\u001b[39;49m read_yaml(config_filepath)\n",
-      "\u001b[1;32mc:\\Users\\huzai\\Desktop\\End-to-End-ML-Project-MLFlow\\research\\01_data_ingestion.ipynb Cell 7\u001b[0m line \u001b[0;36m4\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/huzai/Desktop/End-to-End-ML-Project-MLFlow/research/01_data_ingestion.ipynb#W6sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mclass\u001b[39;00m \u001b[39mConfigurationManager\u001b[39;00m:\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/huzai/Desktop/End-to-End-ML-Project-MLFlow/research/01_data_ingestion.ipynb#W6sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     \u001b[39mdef\u001b[39;00m \u001b[39m__init__\u001b[39m(\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/huzai/Desktop/End-to-End-ML-Project-MLFlow/research/01_data_ingestion.ipynb#W6sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m         \u001b[39mself\u001b[39m,\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/huzai/Desktop/End-to-End-ML-Project-MLFlow/research/01_data_ingestion.ipynb#W6sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m         config_filepath \u001b[39m=\u001b[39m CONFIG_FILE_PATH,\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/huzai/Desktop/End-to-End-ML-Project-MLFlow/research/01_data_ingestion.ipynb#W6sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m         params_filepath \u001b[39m=\u001b[39m PARAMS_FILE_PATH,\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/huzai/Desktop/End-to-End-ML-Project-MLFlow/research/01_data_ingestion.ipynb#W6sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m         schema_filepath \u001b[39m=\u001b[39m SCHEMA_FILE_PATH):\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/huzai/Desktop/End-to-End-ML-Project-MLFlow/research/01_data_ingestion.ipynb#W6sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mconfig \u001b[39m=\u001b[39m read_yaml(config_filepath)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/huzai/Desktop/End-to-End-ML-Project-MLFlow/research/01_data_ingestion.ipynb#W6sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mparams \u001b[39m=\u001b[39m read_yaml(params_filepath)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'CONFIG_FILE_PATH' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class ConfigurationManager:\n",
     "    def __init__(\n",
@@ -132,12 +119,12 @@
     "            unzip_dir=config.unzip_dir \n",
     "        )\n",
     "\n",
-    "        return data_ingestion_config"
+    "        return data_ingestion_config\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,19 +174,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2023-07-11 09:48:52,013: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2023-07-11 09:48:52,015: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2023-07-11 09:48:52,017: INFO: common: yaml file: schema.yaml loaded successfully]\n",
-      "[2023-07-11 09:48:52,020: INFO: common: created directory at: artifacts]\n",
-      "[2023-07-11 09:48:52,021: INFO: common: created directory at: artifacts/data_ingestion]\n",
-      "[2023-07-11 09:48:53,478: INFO: 2366278714: artifacts/data_ingestion/data.zip download! with following info: \n",
+      "[2023-09-12 02:15:08,749: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2023-09-12 02:15:08,756: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2023-09-12 02:15:08,765: INFO: common: yaml file: schema.yaml loaded successfully]\n",
+      "[2023-09-12 02:15:08,769: INFO: common: created directory at: artifacts]\n",
+      "[2023-09-12 02:15:08,772: INFO: common: created directory at: artifacts/data_ingestion]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2023-09-12 02:15:10,067: INFO: 2366278714: artifacts/data_ingestion/data.zip download! with following info: \n",
       "Connection: close\n",
       "Content-Length: 23329\n",
       "Cache-Control: max-age=300\n",
@@ -210,19 +203,19 @@
       "X-Content-Type-Options: nosniff\n",
       "X-Frame-Options: deny\n",
       "X-XSS-Protection: 1; mode=block\n",
-      "X-GitHub-Request-Id: 3E94:6864:6F310:85DCD:64ACD122\n",
+      "X-GitHub-Request-Id: 2BE2:392B:34D3EA:3FC4B1:64FF835E\n",
       "Accept-Ranges: bytes\n",
-      "Date: Tue, 11 Jul 2023 03:48:51 GMT\n",
+      "Date: Mon, 11 Sep 2023 21:15:11 GMT\n",
       "Via: 1.1 varnish\n",
-      "X-Served-By: cache-hkg17928-HKG\n",
+      "X-Served-By: cache-fjr990028-FJR\n",
       "X-Cache: MISS\n",
       "X-Cache-Hits: 0\n",
-      "X-Timer: S1689047331.016661,VS0,VE353\n",
+      "X-Timer: S1694466911.975259,VS0,VE680\n",
       "Vary: Authorization,Accept-Encoding,Origin\n",
       "Access-Control-Allow-Origin: *\n",
       "Cross-Origin-Resource-Policy: cross-origin\n",
-      "X-Fastly-Request-ID: 43493bd55c5e75d012dfa4dd102f06d0b14306ba\n",
-      "Expires: Tue, 11 Jul 2023 03:53:51 GMT\n",
+      "X-Fastly-Request-ID: d0556053cf924fa40f13f86e57ad10f4c02dd711\n",
+      "Expires: Mon, 11 Sep 2023 21:20:11 GMT\n",
       "Source-Age: 0\n",
       "\n",
       "]\n"
@@ -264,7 +257,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.8.16"
   },
   "orig_nbformat": 4
  },
