--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -181,18 +181,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2023-09-12 02:15:08,749: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2023-09-12 02:15:08,756: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2023-09-12 02:15:08,765: INFO: common: yaml file: schema.yaml loaded successfully]\n",
-      "[2023-09-12 02:15:08,769: INFO: common: created directory at: artifacts]\n",
-      "[2023-09-12 02:15:08,772: INFO: common: created directory at: artifacts/data_ingestion]\n"
+      "[2023-09-12 05:46:17,273: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2023-09-12 05:46:17,280: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2023-09-12 05:46:17,289: INFO: common: yaml file: schema.yaml loaded successfully]\n",
+      "[2023-09-12 05:46:17,294: INFO: common: created directory at: artifacts]\n",
+      "[2023-09-12 05:46:17,297: INFO: common: created directory at: artifacts/data_ingestion]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2023-09-12 02:15:10,067: INFO: 2366278714: artifacts/data_ingestion/data.zip download! with following info: \n",
+      "[2023-09-12 05:46:18,099: INFO: 2366278714: artifacts/data_ingestion/data.zip download! with following info: \n",
       "Connection: close\n",
       "Content-Length: 23329\n",
       "Cache-Control: max-age=300\n",
@@ -203,19 +203,19 @@
       "X-Content-Type-Options: nosniff\n",
       "X-Frame-Options: deny\n",
       "X-XSS-Protection: 1; mode=block\n",
-      "X-GitHub-Request-Id: 2BE2:392B:34D3EA:3FC4B1:64FF835E\n",
+      "X-GitHub-Request-Id: 6C9A:271D:24596:783B2:64FFB4DB\n",
       "Accept-Ranges: bytes\n",
-      "Date: Mon, 11 Sep 2023 21:15:11 GMT\n",
+      "Date: Tue, 12 Sep 2023 00:46:19 GMT\n",
       "Via: 1.1 varnish\n",
-      "X-Served-By: cache-fjr990028-FJR\n",
+      "X-Served-By: cache-fjr990024-FJR\n",
       "X-Cache: MISS\n",
       "X-Cache-Hits: 0\n",
-      "X-Timer: S1694466911.975259,VS0,VE680\n",
+      "X-Timer: S1694479580.713388,VS0,VE254\n",
       "Vary: Authorization,Accept-Encoding,Origin\n",
       "Access-Control-Allow-Origin: *\n",
       "Cross-Origin-Resource-Policy: cross-origin\n",
-      "X-Fastly-Request-ID: d0556053cf924fa40f13f86e57ad10f4c02dd711\n",
-      "Expires: Mon, 11 Sep 2023 21:20:11 GMT\n",
+      "X-Fastly-Request-ID: 0e16061aab8d57d3f64977bf4e81f9ddb3643910\n",
+      "Expires: Tue, 12 Sep 2023 00:51:19 GMT\n",
       "Source-Age: 0\n",
       "\n",
       "]\n"
